
6.x
-----

Deprecations
~~~~~~~~~~~~

 * finagle-core: Deprecated the mechanisms of FailureAccrual that use
   factory Transformers.  It's better to just use the Params to
   configure the existing FailureAccrualFactory.  However, if you've
   actually written your own failure accrual transformer that's
   significantly different, then you can do stack.replace() to swap it
   in.

6.23.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: `c.t.f.Stackable`s maintained state about which parameters were
    accessed via `get`. This was error prone and violated the assumption that `Stack`s
    are immutable data structures. We removed this in favor of annotating modules with
    parameters. The abstract classes for Stackables were also simplified. Now we only have
    `Module` and `ModuleN` variants which are more convenient for most definitions.
    Since this is an advanced API, it should not impact standard usage of finagle.
  * finagle-core: Update ConcurrentRingBuffer to use ClassTag instead of ClassManifest;
    rename size argument to capacity.

Deprecations
~~~~~~~~~~~~

  * `ServerBuilder.stack[Req1, Rep1](mk: Stack.Params => Server[Req1, Rep1])` is
    deprecated in favor of
    `ServerBuilder.stack[Req1, Rep1](server: Stack.Parameterized[Server[Req1, Rep1]])`

Runtime Behavior Changes
~~~~~~~~~~~~~~~~~~~~~~~~

  * `finagle`: Improve allocation semantics for uses of Buf.

6.22.0
-------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: Removed unused `com.twitter.finagle.service.ProxyService`. It wasn't
    sufficiently general to be used outside of finagle, and was no longer used
    in finagle.
  * Removed TLSEngine, and replaced it with two, TLSClientEngine, and
    TLSServerEngine, where TLSServerEngine is the same as TLSEngine, and
    TLSClientEngine takes a SocketAddress instead of (). Additionally,
    the Netty3TransporterTLSConfig now takes a function SocketAddress => Engine,
    instead of () => Engine.

New Features